--- a/.gitignore
+++ b/.gitignore
@@ -1490,3 +1490,5 @@ node_modules/xtend/mutable.js
 node_modules/xtend/package.json
 node_modules/xtend/README.md
 node_modules/xtend/test.js
+package-lock.json
+node_modules/
