--- a/admin/package.json
+++ b/admin/package.json
@@ -5,15 +5,15 @@
     "@fortawesome/fontawesome-free": "5.15.2",
     "axios": "^1.2.2",
     "bootstrap": "4.6.0",
-    "chartist": "0.11.4",
+    "chartist": "0.10.1",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
     "moment": "^2.29.4",
-    "react": ">=16.8.0",
+    "react": "17.0.2",
     "react-bootstrap": "2.4.0",
     "react-chartist": "0.14.4",
-    "react-dom": ">=16.8.0",
-    "react-notification-alert": "0.0.13",
+    "react-dom": "17.0.2  ",
+    "react-notification-alert": "^0.0.13",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
