--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT=8081
 MONGO_URI="mongodb+srv://travelagent:random123@cluster0.pxbioqr.mongodb.net/agency?retryWrites=true&w=majority"
+
+JWT_SECRET_KEY = gfg_jwt_secret_key
+  
+TOKEN_HEADER_KEY = gfg_token_header_key
