--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
+    "mdbootstrap": "^4.20.0",
+    "mdbreact": "^5.2.0",
     "moment": "^2.29.4",
     "pagination": "^0.4.6",
     "react": "^18.2.0",
