--- a/admin/package.json
+++ b/admin/package.json
@@ -8,16 +8,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
-    "bootstrap": "^5.2.3",
-    "chartist": "^1.3.0",
-    "gulp": "^4.0.2",
-    "gulp-append-prepend": "^1.0.9",
+    "bootstrap": "4.6.0",
+    "chartist": "0.11.4",
+    "gulp": "4.0.2",
+    "gulp-append-prepend": "1.0.9",
     "moment": "^2.29.4",
-    "react": "^16.13.0",
-    "react-bootstrap": "^2.7.0",
-    "react-dom": "^16.13.0",
-    "react-router-dom": "^5.2.0",
-    "react-notification-alert": "^0.0.13",
+    "react": ">=16.8.0",
+    "react-bootstrap": "2.4.0",
+    "react-chartist": "0.14.4",
+    "react-dom": ">=16.8.0",
+    "react-notification-alert": "0.0.13",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.5",
     "sass": "^1.57.1",
