--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^5.13.7",
     "multer": "^1.4.3",
     "nodemon": "^2.0.20"
